--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,45 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>It is used to structure a webpage and its content.</li>
+          <li>Storage of big files are allowed because of the application cache feature.</li>
+        </ul>
+      </section>
+
+    <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+          </ul>
+
+    </section>
+
+    <section class="card" id="git-section">
+
+      <h2>Git</h2>
+      <ul>
+        <li>git status: checks what branch we are currtly on</li>
+        <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        <li>git clone: copies an existing Git repository</li>
+      </ul>
+    </section>
+
+    <section class="card" id="javaScript-section">
+      <h2>JavaScript</h2>
+      <ul>
+        <li>Enter your JavaScript notes here</li>
+      </ul>
+
+    </section>
+
+    
+
+
     </main>
 
     <footer>
