--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="C:\Users\rhailu\bootcamp\prework-study-guide\prework-study-guide\CSS\style.css" />
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -25,7 +26,10 @@
     <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>The content area contains the real content of the element, such as text, an image, or a video player.</li>
+          <li>Border area extendds the padding area to include the element's borders</li>
           </ul>
 
     </section>
