--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -48,8 +48,11 @@
     <section class="card" id="javaScript-section">
       <h2>JavaScript</h2>
       <ul>
-        <li>Enter your JavaScript notes here</li>
-      </ul>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>Function parameters are listed inside the parentheses () in the function definition.</li>
+        <li>Functions can be used the same way as you use variables, in all types of formulas, assignments, and calculations.</li>
+      </ul
 
     </section>
 
